--- a/src/login.html
+++ b/src/login.html
@@ -80,7 +80,7 @@
         {
             
 var xmlhttp=new XMLHttpRequest();
-    xmlhttp.open("GET","http://localhost/whizly_air_purifier/api/login_fetch.php?email="+document.getElementById("loginemail").value,false);
+    xmlhttp.open("GET","https://red-plant-044950010.1.azurestaticapps.net/api/login_fetch.php?email="+document.getElementById("loginemail").value,false);
     xmlhttp.send();
 
         //  alert("http://localhost/meshling_streetlight/api/fetch_devices_id.php?email="+localStorage.getItem("email")+"&id="+device);
